bdr.BDR.scala.error
Erreur de compilation :
BDR:2: error: not found: value R
while (estSurMessage()){x=litMessage();if (x==R){droite();avance()}
                                              ^BDR:3: error: not found: value L
                       ;if(x==L){gauche();avance()}
                              ^BDR:4: error: not found: value I
                       ;if(x==I){droite();droite();avance()}
                              ^BDR:5: error: not found: value A
                       ;if(x==A){avance()}
                              ^BDR:6: error: not found: value B
                       ;if(x==B){avance(2)}
                              ^BDR:7: error: not found: value C
                       ;if(x==C){avance(3)}
                              ^BDR:8: error: not found: value Z
                       ;if(x==Z){recule(1)}
                              ^BDR:9: error: not found: value Y
                       ;if(x==Y){recule(2)}
                              ^BDR:10: error: not found: value X
                       ;if(x==X){recule(3)}}
                              ^