bdr.BDR.scala.code
var x="D"
while (estSurMessage()){x=litMessage();if (x==R){droite();avance()}
                       ;if(x==L){gauche();avance()}
                       ;if(x==I){droite();droite();avance()}
                       ;if(x==A){avance()}
                       ;if(x==B){avance(2)}
                       ;if(x==C){avance(3)}
                       ;if(x==Z){recule(1)}
                       ;if(x==Y){recule(2)}
                       ;if(x==X){recule(3)}}
				
